# prd-to-mvp-copilot

./: .gitignore  BACKLOG.md  MVP_SPEC.md  PRODUCT_BRIEF.md  README.md  ROADMAP.md  pyproject.toml
demo/: sample_prd.md  task_matrix.schema.json
src/prd_to_mvp_copilot/: __init__.py  cli.py  parser.py
tests/: test_cli.py  test_parser.py
